# GraphIDE

./: .gitignore  CMakeLists.txt  LICENSE  README.md  todo.md  uicompile.bat
Text_OLD/: PolyLineText.cpp_old  TextBlock.cpp_old  TextBlock.h_old  TextUnit.cpp_old  TextUnit.h_old  todo_Text.md
concept/gui/: hover.md
res/shader/: gui.fra  gui.ver
source/: Gide.cpp  Gide.h  main.cpp  resources.cpp
source/Application/: Application.cpp  Application.h  ApplicationFeature.h  FPSCounter.cpp  FPSCounter.h  GuiHandler.cpp  GuiHandler.h
source/Gui/: Font.cpp  Font.h  GuiArray.cpp  GuiArray.h  GuiComponent.cpp  GuiComponent.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  todo.md
source/Gui/Animation/: Animation.cpp  Animation.h  AnimationHandler.cpp  AnimationHandler.h  KeyFrame.cpp  KeyFrame.h  KeyFrameAttributeInformation.cpp  KeyFrameAttributeInformation.h
source/Gui/Attribute/: GuiAttribute.cpp  GuiAttribute.h  GuiAttributeKey.cpp  GuiAttributeKey.h  GuiEqAdd.cpp  GuiEqAdd.h  GuiEqAttach.cpp  GuiEqAttach.h  GuiEqBoundry.cpp  GuiEqBoundry.h  GuiEqFlex.cpp  GuiEqFlex.h  GuiEqMax.cpp  GuiEqMax.h  GuiEqMin.cpp  GuiEqMin.h  GuiEqMult.cpp  GuiEqMult.h  GuiEqPercent.cpp  GuiEqPercent.h  GuiEqPixel.cpp  GuiEqPixel.h  GuiEqRatio.cpp  GuiEqRatio.h  GuiEqSize.cpp  GuiEqSize.h  GuiEqSub.cpp  GuiEqSub.h  GuiEqTextPercent.cpp  GuiEqTextPercent.h  GuiEqTextureHoldRatio.cpp  GuiEqTextureHoldRatio.h  GuiEqTexturePercent.cpp  GuiEqTexturePercent.h  GuiEquation.cpp  GuiEquation.h
source/Gui/Event/: GuiEvent.cpp  GuiEvent.h
source/Gui/Feature/: GuiFeature.cpp  GuiFeature.h  GuiFeatureMove.cpp  GuiFeatureMove.h  GuiFeatureResize.cpp  GuiFeatureResize.h  GuiFeatureTextEdit.cpp  GuiFeatureTextEdit.h
source/Gui/General/: GuiComponent.cpp  GuiComponent.h  Scene.cpp  Sprite.cpp  Text.cpp  Text.h
source/Gui/Text/: CharacterEffect.h  MonoLineText.cpp  MonoLineText.h  PolyLineText.cpp  PolyLineText.h  TextBlock.cpp  TextBlock.h  TextComponent.cpp  TextComponent.h  TextGlyphEffect.h  TextSelectionBoxManager.cpp  TextSelectionBoxManager.h  TextSettings.cpp  TextSettings.h  TextUnit.cpp  TextUnit.h  todo.md  todo_Text.md
source/Gui/Text/CharacterEffect/: RainbowEffect.cpp  RainbowEffect.h
source/Gui/Text/TextComponent/: TextLine.cpp  TextLine.h  TextStylerBold.cpp  TextStylerBold.h  TextUnit.cpp  TextUnit.h
source/OpenGL/: Camera.cpp  Camera.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Mesh.cpp  Mesh.h  Recorder.cpp  Recorder.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
source/Util/: BoolTail.cpp  BoolTail.h  ConsecutiveTickCounter.cpp  ConsecutiveTickCounter.h  Log.cpp  Log.h  LowPrecisionNumber.h  Node.cpp  Node.h  StringAlgorithm.cpp  StringAlgorithm.h
ui/: main.htm
